--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "url": "git+https://github.com/Haba1234/ioBroker.onvif.git"
   },
   "dependencies": {
-    "agsh/onvif": "^0.6.2",
+    "onvif": "agsh/onvif",
     "nimble": "^0.0.2",
 	"sharp": "^0.25.2",
 	"urllib": "^2.34.2",
